issue #215: document required JVM flags in VECTOR.md
Add a "Required JVM flags for SIMD performance" subsection under
"jvector Integration" that spells out:

- the three mandatory flags applied by setenv.sh (--add-modules
  jdk.incubator.vector, --enable-native-access=ALL-UNNAMED,
  -XX:CompileCommandFile=conf/jvector-compiler-directives)
- where the compile-command file lives and why it matters
- how to tell at startup whether jvector is on the fast path or the
  scalar fallback
- the additive JAVA_OPTS_EXTRA / *.javaOptsExtra Helm knobs for adding
  JVM flags without dropping the jvector baseline, with a short
  values.yaml example.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>